fix: add break in overflow text

--- a/src/components/ColumnList/ColumnList.scss
+++ b/src/components/ColumnList/ColumnList.scss
@@ -34,7 +34,7 @@ $list-text-color: #282c34;
 }
 
 .list__tasks {
-  margin: 0 6px;
+  margin-left: 6px;
   overflow-y: auto;
   max-height: 550px;
   height: 100%;
@@ -42,12 +42,15 @@ $list-text-color: #282c34;
 
 .list__task {
   margin-bottom: 5px;
+  margin-right: 6px;
   padding: 6px 8px;
 
   color: $list-text-color;
   box-shadow: 0 1px 1px rgba(9, 30, 66, 0.4);
   background-color: #fff;
   border-radius: 2px;
+  white-space: break-spaces;
+  word-break: break-all;
 }
 
 .add-task-container {
